Test/dafny0/IMaps2.dfy.expect
IMaps2.dfy(7,3): Error: a set comprehension must produce a finite set, but Dafny's heuristics can't figure out how to produce a bounded set of values for 's'
1 resolution/type errors detected in IMaps2.dfy
